--- a/MSBuildVersioning.Test/MSBuildVersioning.Test.csproj
+++ b/MSBuildVersioning.Test/MSBuildVersioning.Test.csproj
@@ -43,6 +43,7 @@
     </Compile>
     <Compile Include="HgVersionInfoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvnVersionInfoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MSBuildVersioning\MSBuildVersioning.csproj">
