--- a/MSBuildVersioning/MSBuildVersioning.csproj
+++ b/MSBuildVersioning/MSBuildVersioning.csproj
@@ -44,14 +44,15 @@
     <Compile Include="HgVersionFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AbstractVersionFile.cs" />
+    <Compile Include="SvnVersionFile.cs" />
+    <Compile Include="SvnVersionInfo.cs" />
     <None Include="Properties\VersionInfo.base.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <UsingTask TaskName="HgVersionFile" AssemblyFile="..\MSBuildVersioning.dll" />
   <Target Name="BeforeBuild">
-    <HgVersionFile TemplateFile="Properties\VersionInfo.base.cs"
-      DestinationFile="Properties\VersionInfo.cs" />
+    <HgVersionFile TemplateFile="Properties\VersionInfo.base.cs" DestinationFile="Properties\VersionInfo.cs" />
   </Target>
   <Target Name="AfterBuild">
   </Target>
