Add template Program.cs to Debug project.

--- a/MSBuildVersioning.Debug/MSBuildVersioning.Debug.csproj
+++ b/MSBuildVersioning.Debug/MSBuildVersioning.Debug.csproj
@@ -43,6 +43,7 @@
     <Compile Include="..\MSBuildVersioning\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <None Include="Program.base.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
