Add new tokens REVNUM_MOD, REVNUM_DIV and SUBDIR.

--- a/.hgignore
+++ b/.hgignore
@@ -2,6 +2,6 @@ relre:\.suo$
 relre:\.user$
 relre:/bin/
 relre:/obj/
-relre:/VersionInfo.cs$
-relre:^MSBuildVersioning.dll$
+relre:/VersionInfo\.cs$
+relre:^References/MSBuildVersioning\.dll$
 relre:^MSBuildVersioning\.Debug/Program\.cs$
