Refactor to separate string token replace logic from MSBuild task classes.
--HG--
rename : MSBuildVersioning.Test/HgVersionInfoTest.cs => MSBuildVersioning.Test/HgInfoProviderTest.cs
rename : MSBuildVersioning.Test/HgVersionFileTest.cs => MSBuildVersioning.Test/HgVersionTokenReplacerTest.cs
rename : MSBuildVersioning.Test/SvnVersionInfoTest.cs => MSBuildVersioning.Test/SvnInfoProviderTest.cs
rename : MSBuildVersioning.Test/SvnVersionFileTest.cs => MSBuildVersioning.Test/SvnVersionTokenReplacerTest.cs
rename : MSBuildVersioning/HgVersionInfo.cs => MSBuildVersioning/HgInfoProvider.cs
rename : MSBuildVersioning/AbstractVersionInfo.cs => MSBuildVersioning/SourceControlInfoProvider.cs
rename : MSBuildVersioning/SvnVersionInfo.cs => MSBuildVersioning/SvnInfoProvider.cs

--- a/MSBuildVersioning/MSBuildVersioning.csproj
+++ b/MSBuildVersioning/MSBuildVersioning.csproj
@@ -39,13 +39,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuildErrorException.cs" />
-    <Compile Include="HgVersionInfo.cs" />
-    <Compile Include="AbstractVersionInfo.cs" />
+    <Compile Include="HgInfoProvider.cs" />
+    <Compile Include="HgVersionTokenReplacer.cs" />
+    <Compile Include="SourceControlInfoProvider.cs" />
     <Compile Include="HgVersionFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvnVersionTokenReplacer.cs" />
     <Compile Include="AbstractVersionFile.cs" />
     <Compile Include="SvnVersionFile.cs" />
-    <Compile Include="SvnVersionInfo.cs" />
+    <Compile Include="SvnInfoProvider.cs" />
+    <Compile Include="AbstractVersionTokenReplacer.cs" />
     <None Include="Properties\VersionInfo.base.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
