--- a/MSBuildVersioning.Test/MSBuildVersioning.Test.csproj
+++ b/MSBuildVersioning.Test/MSBuildVersioning.Test.csproj
@@ -53,6 +53,7 @@
     <Compile Include="HgInfoProviderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SvnInfoProviderTest.cs" />
+    <Compile Include="VersionTokenReplacerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MSBuildVersioning\MSBuildVersioning.csproj">
