Sample code for an app with an About dialog showing Mercurial version information.

--- a/.hgignore
+++ b/.hgignore
@@ -5,3 +5,4 @@ relre:/obj/
 relre:/VersionInfo\.cs$
 relre:^References/MSBuildVersioning\.dll$
 relre:^MSBuildVersioning\.Debug/Program\.cs$
+relre:/BuildInfo\.cs$
