--- a/MSBuildVersioning.Test/MSBuildVersioning.Test.csproj
+++ b/MSBuildVersioning.Test/MSBuildVersioning.Test.csproj
@@ -14,6 +14,10 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
+    <SccProjectName>PlasticSCM</SccProjectName>
+    <SccLocalPath>PlasticSCM</SccLocalPath>
+    <SccAuxPath>PlasticSCM</SccAuxPath>
+    <SccProvider>Plastic SCM Source Control Service:{774e58ba-f1b9-40a7-b676-834fa2c220fe}</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,7 +43,9 @@
     <Reference Include="Moq">
       <HintPath>..\References\Moq.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -48,6 +54,8 @@
     <Compile Include="..\MSBuildVersioning\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="PlasticInfoProviderTest.cs" />
+    <Compile Include="PlasticVersionTokenReplacerTest.cs" />
     <Compile Include="SvnVersionTokenReplacerTest.cs" />
     <Compile Include="HgVersionTokenReplacerTest.cs" />
     <Compile Include="HgInfoProviderTest.cs" />
@@ -60,6 +68,9 @@
       <Project>{A8C04BD0-ED60-4920-920F-FE3A12F34C50}</Project>
       <Name>MSBuildVersioning</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
